<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_cam_cpp</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for stereo camera</description>
  <maintainer email="qdpham@connect.ust.hk">pqdung</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
