cmake_minimum_required(VERSION 3.8)
project(ping360_sonar_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# install(DIRECTORY launch
#   DESTINATION share/${PROJECT_NAME}
# )

rosidl_generate_interfaces(${PROJECT_NAME} "msg/SonarEcho.msg" DEPENDENCIES std_msgs)

ament_package()
