<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ping360_sonar_py</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for Blue Robotics Ping360 Sonar</description>
  <maintainer email="qdpham@connect.ust.hk">pqdung</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ping360_sonar_msgs</exec_depend>
  <exec_depend>python3-bluerobotics-ping-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
